--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ script: pytest
 
 
 #when we have dependencies, uncomment the below, make requirements.txt with the dependencies in it
-install:
+#install:
 ##  - pip install -r requirements.txt
