--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ script: pytest
 #when we have dependencies, uncomment the below, make requirements.txt with the dependencies in it
 install:
 .travis.yml
-##  - pip install -r requirements.txt
+  - pip install -r requirements.txt
