--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ script: pytest
 
 
 # when we have dependencies, uncomment the below, make requirements.txt with the dependencies in it
-# install:
-  # - .travis.yml
-  # - pip install -r requirements.txt
+install:
+  - .travis.yml
+  - pip install -r requirements.txt
