--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,6 @@ before_install:
 
 # when we have dependencies, uncomment the below, make requirements.txt with the dependencies in it
 install:
-  - .travis.yml
+  - pip install .
+  #- .travis.yml
   #- pip install -r requirements.txt
