--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ python:
   - "3.6"
 script: pytest
 
-before_install:
-  - sudo apt-get update
+#before_install:
+#  - sudo apt-get update
 
 install:
   - pip install -r requirements.txt
