--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: python
 python: 
   - "3.6"
   
-#install: pip install .
+install: pip install .
 
 #script: echo "This is hard"
 script: pytest
