--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ language: python
 python: 
  - "3.6"
   
-install: pip install -e .
+install: 
   - pip install -r requirements.txt
+  - pip install -e .
   
 script: pytest
 #script: python hay.py
