--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
  - "3.6"
   
 install: 
-  - pip install -r requirements.txt
+  #- pip install -r requirements.txt
   - pip -m install django
   - pip install -e .
   
